# dioxus

./: .gitignore  .pre-commit-config.yaml  AI_AGENT_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING_AI.md  Cargo.toml  Makefile  PROJECT_METADATA.json  README.md  SECURITY.md  SUPPORT.md  clippy.toml  deny.toml  rust-toolchain.toml
apps/hello-world/: Cargo.toml  Dioxus.toml  index.html
apps/hello-world/public/assets/: style.css
apps/hello-world/src/: main.rs
apps/lotus-api/: Cargo.toml  Dockerfile  README.md
apps/lotus-api/src/: config.rs  errors.rs  handlers.rs  main.rs  query_logic.rs  services.rs  state.rs  tests.rs  types.rs
apps/lotus-explorer/: Cargo.toml  Dioxus.toml  README.md  SKILLS.md  index.html
apps/lotus-explorer/assets/: style.css
apps/lotus-explorer/docs/: ARCHITECTURE.md  ARCHITECTURE_MODERNIZATION_BLUEPRINT.md  CITATION.md  CURATION_SHARE_LINKS.md  MODERNIZATION_MIGRATION_PLAN.md
apps/lotus-explorer/docs/skills/: ARCHITECTURE_SKILLS.md  ASYNC_DATA_ERROR_SKILLS.md  COLLABORATION_AI_SKILLS.md  DIOXUS_STATE_RENDER_SKILLS.md  PERFORMANCE_SKILLS.md  README.md  SUGGESTIONS.md  TESTING_QUALITY_SKILLS.md
apps/lotus-explorer/public/: _headers  _redirects
apps/lotus-explorer/public/assets/: style.css
apps/lotus-explorer/public/assets/styles/: accessibility_pack.css  curation_pack.css  footer_pack.css  form_controls_pack.css  layout_shell_pack.css  query_panel_pack.css  responsive_pack.css  results_pack.css  table_cells_pack.css  welcome_pack.css
apps/lotus-explorer/public/docs/: references.bib
apps/lotus-explorer/public/ketcher/: iframe.html
apps/lotus-explorer/src/: api.rs  app_state.rs  curation.rs  download.rs  export.rs  i18n.rs  main.rs  models.rs  perf.rs  queries.rs  sparql.rs  state.rs  tests.rs
apps/lotus-explorer/src/api/: client.rs  config.rs  dto.rs  error.rs
apps/lotus-explorer/src/app/: bootstrap.rs  draw_page.rs  mod.rs  shell.rs  view.rs
apps/lotus-explorer/src/components/: copy_button.rs  curation_results_table.rs  data_curation_page.rs  form_inputs.rs  form_sections.rs  loading.rs  mod.rs  results_table.rs  results_viewport.rs  search_panel.rs  welcome.rs
apps/lotus-explorer/src/components/data_curation_page/: sections.rs
apps/lotus-explorer/src/components/form_sections/: basic_sections.rs  formula_section.rs  shared.rs
apps/lotus-explorer/src/components/layout/: footer.rs  header_meta.rs  lang_switch.rs  mod.rs  notices.rs  page_header.rs  sidebar.rs  view_switch.rs
apps/lotus-explorer/src/components/results_table/: download_model.rs  header_model.rs  render_model.rs  row_cells.rs  scroll_runtime.rs  sort_helpers.rs  sort_model.rs  table_header.rs  table_toolbar_sections.rs  table_view_model.rs  toolbar.rs  virtualization_controller.rs  virtualized_table.rs
apps/lotus-explorer/src/components/results_table/row_cells/: prepared.rs  render.rs  row_text.rs
apps/lotus-explorer/src/components/results_table/table_toolbar_sections/: download_actions.rs  mod.rs  query_panel.rs  stat_bar.rs
apps/lotus-explorer/src/components/search_panel/: structure_model.rs
apps/lotus-explorer/src/core/: error.rs  mod.rs
apps/lotus-explorer/src/curation/: chemical.rs  helpers.rs  http_client.rs  reference_metadata.rs  share_links.rs  wikidata.rs
apps/lotus-explorer/src/data/: api.rs  mod.rs
apps/lotus-explorer/src/download/: coordinator.rs  native.rs  wasm.rs
apps/lotus-explorer/src/export/: filename.rs  filters.rs  metadata.rs
apps/lotus-explorer/src/features/: mod.rs
apps/lotus-explorer/src/features/curation/: mod.rs  queue.rs  workflow.rs
apps/lotus-explorer/src/features/curation/domain/: constants.rs  internal.rs  mod.rs  quickstatements.rs  types.rs
apps/lotus-explorer/src/features/curation/repositories/: mod.rs  wikidata.rs
apps/lotus-explorer/src/features/curation/services/: chemical.rs  enrichment.rs  helpers.rs  http_client.rs  inputs.rs  mod.rs  occurrence_cache.rs  pipeline.rs  quickstatements.rs  reference_metadata.rs  wikidata.rs
apps/lotus-explorer/src/features/curation/state/: mod.rs  page_controller.rs
apps/lotus-explorer/src/features/explore/: actions.rs  command.rs  download_dispatch.rs  download_effects.rs  error_recovery_coordinator.rs  executor.rs  form_actions.rs  form_validation.rs  interactions.rs  lifecycle.rs  mod.rs  orchestrator.rs  outcome.rs  recovery.rs  request.rs  retryable_orchestrator.rs  search_metrics.rs  search_state.rs  search_utils.rs  selectors.rs  sparql_errors.rs  task_coordination.rs  taxon_cache.rs  transport_classification.rs  types.rs  url_codec.rs  url_state.rs
apps/lotus-explorer/src/features/explore/download_effects/: dispatch.rs  metrics.rs  mod.rs  startup.rs  (+1 more)
apps/lotus-explorer/src/hooks/: locale_provider.rs  mod.rs  use_add_row_form.rs  use_locale.rs  use_virtualization.rs
apps/lotus-explorer/src/i18n/: curation.rs  de.rs  en.rs  error_key.rs  fr.rs  helpers.rs  it.rs  mod.rs
apps/lotus-explorer/src/i18n/curation/: de.rs  en.rs  fr.rs  it.rs  mod.rs
apps/lotus-explorer/src/i18n/helpers/: aria.rs  errors.rs  helpers_aria.rs  helpers_errors.rs  mod.rs
apps/lotus-explorer/src/repositories/: hybrid.rs  mock.rs  mod.rs
apps/lotus-explorer/src/services/: app_services.rs  error_presenter.rs  mod.rs  search_telemetry.rs
apps/lotus-explorer/src/state/: form_context.rs
apps/lotus-explorer/src/ui/: a11y_contract.rs  a11y_smoke.rs  mod.rs
apps/lotus-explorer/src/utils/: logging.rs  mod.rs
apps/lotus-pubchem-tree/: Cargo.toml  Dioxus.toml  README.md  index.html
apps/lotus-pubchem-tree/public/assets/: style.css
apps/lotus-pubchem-tree/src/: api.rs  app_state.rs  main.rs  models.rs  tests.rs
apps/lotus-pubchem-tree/src/api/: client.rs  config.rs  dto.rs  error.rs
apps/lotus-pubchem-tree/src/app/: mod.rs  shell.rs
apps/lotus-pubchem-tree/src/components/: mod.rs  preview_tree.rs  stat_grid.rs  tree_viewer.rs
apps/lotus-pubchem-tree/src/services/: error_presenter.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  sparql.rs  theme.rs
crates/shared/src/lotus/: mod.rs  models.rs  pubchem_tree.rs  queries.rs  sparql.rs
(+69 files in other folders)
