[workspace]
resolver = "2"
members = [
  "apps/hello-world",
  "apps/lotus-api",
  "apps/lotus-explorer",
  "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
repository = "https://github.com/adafede/dioxus"
license = "AGPL-3.0-only"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]
bytes = "1"
console_log = "1.0"
csv = "1"
dioxus = { version = "=0.7.9", features = ["web"] }
js-sys = "0.3"
log = "0.4"
reqwest = { version = "0.13", features = ["gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = "1.52.2"
urlencoding = "2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"] }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unimplemented = "warn"
use_self = "warn"
unnecessary_wraps = "warn"
needless_lifetimes = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

# High-noise / style-opinion lints intentionally relaxed to keep signal high.
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
lint_groups_priority = "allow"

# Additional broad-noise lints discovered under full workspace + all-target checks.
doc_markdown = "allow"
items_after_statements = "allow"
missing_const_for_fn = "allow"
duration_suboptimal_units = "allow"
option_if_let_else = "allow"
map_unwrap_or = "allow"
unreadable_literal = "allow"
uninlined_format_args = "allow"
needless_raw_string_hashes = "allow"
unnecessary_struct_initialization = "allow"
derive_partial_eq_without_eq = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[profile.dev]
opt-level = 1

# ── Release profile — tiny WASM ───────────────────────────────────────────────
[profile.release]
opt-level = "z"
debug = false
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

# ── Benchmarking profile — optimized but with symbols for profiling ─────────
[profile.bench]
inherits = "release"
debug = true
strip = "none"
codegen-units = 16

# ── Testing profile — faster compilation, better diagnostics ─────────────────
[profile.test]
opt-level = 1
lto = "thin"

