[workspace]
resolver = "2"
members = [
  "apps/hello-world",
  "apps/lotus-api",
  "apps/lotus-explorer",
  "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
repository = "https://github.com/adafede/dioxus"
license = "AGPL-3.0-only"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]
bytes = "1"
console_log = "1.0"
csv = "1"
dioxus = { version = "=0.7.9", features = ["web"] }
js-sys = "0.3"
log = "0.4"
reqwest = { version = "0.13", features = ["gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = "1.52.2"
urlencoding = "2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"] }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unimplemented = "warn"
use_self = "warn"
unnecessary_wraps = "warn"
needless_lifetimes = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# High-noise / style-opinion lints intentionally relaxed to keep signal high.
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
lint_groups_priority = "allow"

# Additional broad-noise lints discovered under full workspace + all-target checks.
doc_markdown = "allow"
items_after_statements = "allow"
missing_const_for_fn = "allow"
duration_suboptimal_units = "allow"
option_if_let_else = "warn"
map_unwrap_or = "warn"
unreadable_literal = "allow"
uninlined_format_args = "allow"
needless_raw_string_hashes = "allow"
unnecessary_struct_initialization = "allow"
derive_partial_eq_without_eq = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
default_trait_access = "allow"
explicit_iter_loop = "allow"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
format_push_string = "allow"
future_not_send = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
large_types_passed_by_value = "allow"
manual_let_else = "allow"
manual_string_new = "allow"
match_same_arms = "allow"
needless_pass_by_ref_mut = "allow"
needless_pass_by_value = "allow"
no_effect_underscore_binding = "allow"
option_as_ref_cloned = "allow"
or_fun_call = "allow"
redundant_clone = "allow"
redundant_closure_for_method_calls = "allow"
redundant_pub_crate = "allow"
semicolon_if_nothing_returned = "allow"
significant_drop_tightening = "allow"
single_match_else = "allow"
single_option_map = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
trivially_copy_pass_by_ref = "allow"
unchecked_time_subtraction = "allow"
unnested_or_patterns = "allow"
unused_async = "allow"
unused_self = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[profile.dev]
opt-level = 1

# ── Release profile — tiny WASM ───────────────────────────────────────────────
[profile.release]
opt-level = "z"
debug = false
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

# ── Benchmarking profile — optimized but with symbols for profiling ─────────
[profile.bench]
inherits = "release"
debug = true
strip = "none"
codegen-units = 16

# ── Testing profile — faster compilation, better diagnostics ─────────────────
[profile.test]
opt-level = 1
lto = "thin"

