[workspace]
resolver = "2"
members = [
  "apps/hello-world",
  "apps/lotus-api",
  "apps/lotus-explorer",
  "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
repository = "https://github.com/adafede/dioxus"
license = "AGPL-3.0-only"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]
bytes = "1"
console_log = "1.0"
csv = "1"
dioxus = { version = "=0.7.9", features = ["web"] }
js-sys = "0.3"
log = "0.4"
reqwest = { version = "0.13", features = ["gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = "1.52.2"
urlencoding = "2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"] }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unimplemented = "warn"
use_self = "warn"
unnecessary_wraps = "warn"
needless_lifetimes = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# High-noise / style-opinion lints intentionally relaxed to keep signal high.
module_name_repetitions = "warn"
similar_names = "warn"
too_many_lines = "warn"
must_use_candidate = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
wildcard_imports = "warn"
cargo_common_metadata = "warn"
# Keep this lint enabled; unavoidable transitive duplicates are allowlisted in
# `clippy.toml` via `allowed-duplicate-crates`.
multiple_crate_versions = "warn"
lint_groups_priority = "warn"

# Additional broad-noise lints discovered under full workspace + all-target checks.
doc_markdown = "warn"
items_after_statements = "warn"
missing_const_for_fn = "warn"
duration_suboptimal_units = "warn"
option_if_let_else = "warn"
map_unwrap_or = "warn"
unreadable_literal = "warn"
uninlined_format_args = "warn"
needless_raw_string_hashes = "warn"
unnecessary_struct_initialization = "warn"
derive_partial_eq_without_eq = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
default_trait_access = "warn"
explicit_iter_loop = "warn"
float_cmp = "warn"
fn_params_excessive_bools = "warn"
format_push_string = "warn"
future_not_send = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
large_types_passed_by_value = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
no_effect_underscore_binding = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_pub_crate = "warn"
semicolon_if_nothing_returned = "warn"
significant_drop_tightening = "warn"
single_match_else = "warn"
single_option_map = "warn"
struct_excessive_bools = "warn"
struct_field_names = "warn"
trivially_copy_pass_by_ref = "warn"
unchecked_time_subtraction = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
unused_self = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[profile.dev]
opt-level = 1

# ── Release profile — tiny WASM ───────────────────────────────────────────────
[profile.release]
opt-level = "z"
debug = false
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

# ── Benchmarking profile — optimized but with symbols for profiling ─────────
[profile.bench]
inherits = "release"
debug = true
strip = "none"
codegen-units = 16

# ── Testing profile — faster compilation, better diagnostics ─────────────────
[profile.test]
opt-level = 1
lto = "thin"

