[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"
description = "Minimal Dioxus web-app template — copy this to start a new app"

[[bin]]
name = "hello-world"
path = "src/main.rs"

[dependencies]
console_log = { workspace = true }
dioxus = { workspace = true }
log = { workspace = true }
shared = { path = "../../crates/shared" }
