[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-only"
publish = false
description = "Minimal Dioxus web-app template — copy this to start a new app"
keywords = ["dioxus", "wasm", "template"]
categories = ["wasm", "web-programming"]

[[bin]]
name = "hello-world"
path = "src/main.rs"

[dependencies]
console_log = { workspace = true }
dioxus = { workspace = true }
log = { workspace = true }
shared = { path = "../../crates/shared", version = "0.1.0" }

[lints]
workspace = true

