[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Minimal Dioxus web-app template — copy this to start a new app"
license = "AGPL-3.0-only"
keywords = ["dioxus", "template", "wasm"]
categories = ["wasm", "web-programming"]
publish = false

[[bin]]
name = "hello-world"
path = "src/main.rs"

[dependencies]
console_log = { workspace = true }
dioxus = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
