[package]
name = "lotus-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "OpenAPI service for LOTUS explorer search and export workflows"
license = "AGPL-3.0-only"
keywords = ["api", "lotus", "natural-products", "sparql", "wikidata"]
categories = ["science", "web-programming::http-server"]
publish = false

[[bin]]
name = "lotus-api"
path = "src/main.rs"

[dependencies]
axum = "0.8"
env_logger = "0.11"
log = { workspace = true }
serde = { workspace = true }
sha2 = { version = "0.11", default-features = false }
shared = { path = "../../crates/shared", version = "0.1.0" }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync"
] }
tower-http = { version = "0.6", features = [
  "compression-full",
  "cors",
  "request-id",
  "trace"
] }
tracing = "0.1"
urlencoding = { workspace = true }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[lints]
workspace = true
