[package]
name = "lotus-explorer"
version = "0.1.0"
edition = "2026"
description = "LOTUS Wikidata natural-product occurrence explorer"

[[bin]]
name = "lotus-explorer"
path = "src/main.rs"

[dependencies]
console_log = { workspace = true }
csv = { workspace = true }
# Use the workspace pin (`dioxus = "0.7"`, `features = ["web"]`) so dx can
# auto-detect the `wasm32-unknown-unknown` target. Without a platform
# feature, dioxus-cli 0.7+ fails with "Could not automatically detect
# target triple".
dioxus = { workspace = true }
dioxus-router = { workspace = true }
js-sys.workspace = true
log = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
shared = { path = "../../crates/shared" }
urlencoding = { workspace = true }
web-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
