[package]
name = "lotus-explorer"
version = "0.1.0"
edition = "2024"
description = "LOTUS Wikidata natural-product occurrence explorer"

[[bin]]
name = "lotus-explorer"
path = "src/main.rs"

[dependencies]
console_log = { workspace = true }
csv = { workspace = true }
# Use the workspace pin (`dioxus = "0.7"`, `features = ["web"]`) so dx can
# auto-detect the `wasm32-unknown-unknown` target. Without a platform
# feature, dioxus-cli 0.7+ fails with "Could not automatically detect
# target triple".
dioxus = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
sha2 = { version = "0.11", default-features = false }
shared = { path = "../../crates/shared" }
urlencoding = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { workspace = true, features = [
  "Blob",
  "BlobPropertyBag",
  "Document",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlTextAreaElement",
  "Location",
  "Performance",
  "Url",
  "Window",
] }
