[package]
name = "shared"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-only"
description = "Shared SPARQL utilities for dioxus-apps"
keywords = ["sparql", "wikidata", "csv", "wasm"]
categories = ["web-programming", "science"]

[dependencies]
csv = { workspace = true }
log = { workspace = true }
reqwest.workspace = true
urlencoding = { workspace = true }

[lints]
workspace = true

