[package]
name = "shared"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Shared SPARQL utilities for dioxus-apps"
license = "AGPL-3.0-only"
keywords = ["csv", "sparql", "wasm", "wikidata"]
categories = ["science", "web-programming"]
publish = false

[dependencies]
bytes = { workspace = true }
csv = { workspace = true }
log = { workspace = true }
reqwest.workspace = true
urlencoding = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
